# Rekon

./: .env.example  QUICKSTART.md  README.md  pyproject.toml
.kiro/specs/rekon/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
agents/checklist_generator/: instructions.md
agents/gap_identifier/: agent.json  instructions.md
agents/remediation_engine/: agent.json  instructions.md
infrastructure/: app.py  cdk.json
infrastructure/constructs/: __init__.py
infrastructure/stacks/: base_stack.py  cache_stack.py  database_stack.py  dynamodb_stack.py  events_stack.py  storage_stack.py  vpc_stack.py
lambda_functions/checklist_generator/: app.py
lambda_functions/delta_analyzer/: app.py
lambda_functions/evidence_retention/: app.py
lambda_functions/gap_assessment/: app.py
lambda_functions/regulation_puller/: app.py
lambda_functions/remediation_engine/: app.py  requirements.txt
requirements/: base.txt  dev.txt
scripts/: deploy.py
src/rekon/: __init__.py  main.py
src/rekon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/rekon/api/: auth.py  dependencies.py
src/rekon/core/: config.py  exceptions.py
src/rekon/db/: session.py
src/rekon/services/: audit_log_service.py  dlq_service.py  (+14 more)
tests/: conftest.py
tests/unit/: test_cache_service.py  test_checklist_service.py  test_dashboard_service.py  test_delta_analyzer_service.py  test_evidence_service.py  test_gap_assessment_service.py  test_monitoring_service.py  test_regulation_puller_lambda.py  test_regulation_service.py  test_remediation_service.py  test_report_service.py  test_retry_utils.py
(+33 files in other folders)
